--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.10",
+        "@fullcalendar/daygrid": "^6.1.10",
+        "@fullcalendar/timegrid": "^6.1.10",
         "autoprefixer": "^10.4.17",
         "laravel-mix": "^6.0.49",
         "postcss": "^8.4.33",
